[project]
name = "zip-github-telegram-bot"
version = "1.0.0"
description = "Async multi-user Telegram bot that uploads ZIP archives to GitHub"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.22,<4",
  "aiohttp>=3.10,<4",
  "aiosqlite>=0.20,<1",
  "cryptography>=43,<46",
  "pydantic-settings>=2.6,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.8", "mypy>=1.13"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
